Configured with username and password

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,8 @@ default: &default
 development:
   <<: *default
   database: RecipesApp_development
+  username: <%= ENV['RECIPESAPP_DATABASE_USER'] %>
+  password: <%= ENV['RECIPESAPP_DATABASE_PASSWORD'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
